<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_margin="@dimen/margin_size_16_dp"
        android:textColor="@color/red"
        android:textSize="@dimen/text_size_16_sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_avchart_input_time"
        android:id="@+id/textView4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_marginRight="@dimen/margin_size_16_dp"
        android:layout_marginLeft="@dimen/margin_size_16_dp"
        android:layout_height="@dimen/margin_size_40_dp"
        android:background="@drawable/shape_black_44p">
        <LinearLayout
            android:id="@+id/create_avchart_date_ll"
            android:layout_marginLeft="@dimen/margin_size_16_dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/create_avchart_settime_year"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:padding="@dimen/margin_size_6_dp"
                android:textSize="@dimen/text_size_16_sp"
                android:background="@color/gray"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:text="2016"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16_sp"
                android:layout_marginLeft="@dimen/margin_size_4_dp"
                android:layout_marginRight="@dimen/margin_size_4_dp"
                android:text="@string/year"/>
            <TextView
                android:id="@+id/create_avchart_settime_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16_sp"
                android:padding="@dimen/margin_size_6_dp"
                android:background="@color/gray"
                android:text="10"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16_sp"
                android:layout_marginLeft="@dimen/margin_size_4_dp"
                android:layout_marginRight="@dimen/margin_size_4_dp"
                android:text="@string/month"/>

            <TextView
                android:id="@+id/create_avchart_settime_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16_sp"
                android:padding="@dimen/margin_size_6_dp"
                android:background="@color/gray"
                android:text="26" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginLeft="@dimen/margin_size_4_dp"
                android:layout_marginRight="@dimen/margin_size_4_dp"
                android:textSize="@dimen/text_size_16_sp"
                android:text="@string/day"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:id="@+id/create_avchart_time_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/create_avchart_settime_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_16_sp"
                android:paddingTop="@dimen/margin_size_6_dp"
                android:paddingBottom="@dimen/margin_size_6_dp"
                android:paddingRight="@dimen/margin_size_14_dp"
                android:paddingLeft="@dimen/margin_size_14_dp"
                android:textColor="@color/black"
                android:background="@color/gray"
                android:text="11"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_margin="@dimen/margin_size_6_dp"
                android:textSize="@dimen/text_size_16_sp"
                android:text=":"/>

            <TextView
                android:id="@+id/create_avchart_settime_minute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16_sp"
                android:paddingTop="@dimen/margin_size_6_dp"
                android:paddingBottom="@dimen/margin_size_6_dp"
                android:paddingRight="@dimen/margin_size_14_dp"
                android:paddingLeft="@dimen/margin_size_14_dp"
                android:background="@color/gray"
                android:text="35" />
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_marginTop="@dimen/margin_size_20_dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray_888888"
        android:textSize="@dimen/text_size_12_sp"
        android:layout_marginLeft="@dimen/margin_size_16_dp"
        android:layout_marginRight="@dimen/margin_size_16_dp"
        android:text="*温馨提示：选择的会诊时间必须在当前时间的一个半小时之后，否则将创建失败。"/>
</LinearLayout>